@startuml
'https://plantuml.com/class-diagram


package com.example.prueba.modelo {

    class Evento {

    }

    class Evento_Gratis {

    }

    class Evento_Pago {

    }

    class Localidad {

    }

    class Usuario {

    }
     class Evento {
        }

        class Evento_Gratis {
        }

        class Evento_Pago {
        }

        class Localidad {
        }

        class Usuario {
        }


}


package com.example.prueba.controlador {
class ControladorDatosEventos {
    + onCreate(Bundle savedInstanceState)
    + init()
    + rellenarDatosEventoGratis(Evento_Gratis eventoGratis)
    + rellenarDatosEventoPago(Evento_Pago eventoPago)
    + apuntarse(View view)
    + asistenciaEvento(View view)
    + eliminarEvento(View view)
    + editarEvento(View view)
    + atras(View v)
    + volverAtras()
}
    class agregarEventos {
        + void onCreate(Bundle savedInstanceState)
        + void init()
        + void camposEventoPago()
        + void camposEventoGratis()
        + void showDatePickerDialog()
        + void agregarEvento(View view)
        + void atrasX(View view)
        class SacarLocalidades {
            + String doInBackground(Void... voids)
            + void onPostExecute(String result)
        }
        class insertarEventoPagoTask {
            + String doInBackground(String... params)
            + void onPostExecute(String result)
        }
        class insertarEventoGratisTask {
            + String doInBackground(String... params)
            + void onPostExecute(String result)
        }

    }

    agregarEventos --> insertarEventoPagoTask
    agregarEventos --> insertarEventoGratisTask




Evento <|-- Evento_Gratis
Evento <|-- Evento_Pago
Localidad --> agregarEventos
Usuario --> agregarEventos
}
@enduml